compiler/fabc_parser/src/ast/snapshots/fabc_parser__ast__expr__tests__parses_logical_expr.snap
---
source: compiler/fabc_parser/src/ast/expr.rs
expression: expr
---
Binary {
    info: NodeInfo {
        id: 7,
        span: Span {
            start: LineCol(
                1,
                1,
            ),
            end: LineCol(
                1,
                22,
            ),
        },
    },
    left: Binary {
        info: NodeInfo {
            id: 4,
            span: Span {
                start: LineCol(
                    1,
                    1,
                ),
                end: LineCol(
                    1,
                    14,
                ),
            },
        },
        left: Primary {
            info: NodeInfo {
                id: 1,
                span: Span {
                    start: LineCol(
                        1,
                        1,
                    ),
                    end: LineCol(
                        1,
                        4,
                    ),
                },
            },
            value: Literal(
                Boolean {
                    info: NodeInfo {
                        id: 0,
                        span: Span {
                            start: LineCol(
                                1,
                                1,
                            ),
                            end: LineCol(
                                1,
                                4,
                            ),
                        },
                    },
                    value: true,
                },
            ),
        },
        operator: And,
        right: Primary {
            info: NodeInfo {
                id: 3,
                span: Span {
                    start: LineCol(
                        1,
                        10,
                    ),
                    end: LineCol(
                        1,
                        14,
                    ),
                },
            },
            value: Literal(
                Boolean {
                    info: NodeInfo {
                        id: 2,
                        span: Span {
                            start: LineCol(
                                1,
                                10,
                            ),
                            end: LineCol(
                                1,
                                14,
                            ),
                        },
                    },
                    value: false,
                },
            ),
        },
    },
    operator: Or,
    right: Primary {
        info: NodeInfo {
            id: 6,
            span: Span {
                start: LineCol(
                    1,
                    19,
                ),
                end: LineCol(
                    1,
                    22,
                ),
            },
        },
        value: Literal(
            Boolean {
                info: NodeInfo {
                    id: 5,
                    span: Span {
                        start: LineCol(
                            1,
                            19,
                        ),
                        end: LineCol(
                            1,
                            22,
                        ),
                    },
                },
                value: true,
            },
        ),
    },
}
