compiler/fabc_parser/src/ast/snapshots/fabc_parser__ast__expr__tests__parses_member_access_expr.snap
---
source: compiler/fabc_parser/src/ast/expr.rs
expression: expr
---
MemberAccess {
    info: NodeInfo {
        id: 6,
        span: Span {
            start: LineCol(
                1,
                1,
            ),
            end: LineCol(
                1,
                15,
            ),
        },
    },
    left: Primary {
        info: NodeInfo {
            id: 1,
            span: Span {
                start: LineCol(
                    1,
                    1,
                ),
                end: LineCol(
                    1,
                    3,
                ),
            },
        },
        value: Primitive(
            Identifier {
                info: NodeInfo {
                    id: 0,
                    span: Span {
                        start: LineCol(
                            1,
                            1,
                        ),
                        end: LineCol(
                            1,
                            3,
                        ),
                    },
                },
                name: "obj",
            },
        ),
    },
    members: [
        Primary {
            info: NodeInfo {
                id: 3,
                span: Span {
                    start: LineCol(
                        1,
                        5,
                    ),
                    end: LineCol(
                        1,
                        9,
                    ),
                },
            },
            value: Primitive(
                Identifier {
                    info: NodeInfo {
                        id: 2,
                        span: Span {
                            start: LineCol(
                                1,
                                5,
                            ),
                            end: LineCol(
                                1,
                                9,
                            ),
                        },
                    },
                    name: "prop1",
                },
            ),
        },
        Primary {
            info: NodeInfo {
                id: 5,
                span: Span {
                    start: LineCol(
                        1,
                        11,
                    ),
                    end: LineCol(
                        1,
                        15,
                    ),
                },
            },
            value: Primitive(
                Identifier {
                    info: NodeInfo {
                        id: 4,
                        span: Span {
                            start: LineCol(
                                1,
                                11,
                            ),
                            end: LineCol(
                                1,
                                15,
                            ),
                        },
                    },
                    name: "prop2",
                },
            ),
        },
    ],
}
