compiler/fabc_parser/src/ast/snapshots/fabc_parser__ast__expr__tests__parses_unary_expr.snap
---
source: compiler/fabc_parser/src/ast/expr.rs
expression: expr
---
Unary {
    info: NodeInfo {
        id: 3,
        span: Span {
            start: LineCol(
                1,
                2,
            ),
            end: LineCol(
                1,
                3,
            ),
        },
    },
    operator: Negate,
    right: Unary {
        info: NodeInfo {
            id: 2,
            span: Span {
                start: LineCol(
                    1,
                    3,
                ),
                end: LineCol(
                    1,
                    3,
                ),
            },
        },
        operator: Not,
        right: Primary {
            info: NodeInfo {
                id: 1,
                span: Span {
                    start: LineCol(
                        1,
                        3,
                    ),
                    end: LineCol(
                        1,
                        4,
                    ),
                },
            },
            value: Literal(
                Number {
                    info: NodeInfo {
                        id: 0,
                        span: Span {
                            start: LineCol(
                                1,
                                3,
                            ),
                            end: LineCol(
                                1,
                                4,
                            ),
                        },
                    },
                    value: 42.0,
                },
            ),
        },
    },
}
